# cmake_template

./: .clang-format  .gitmodules  CMakeLists.txt  build.sh
include/: error.h  sample.h  system.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  sample.c  sample_sub.c  system.c
src/sample/: CMakeLists.txt  main  main.c
test/: CMakeLists.txt  sample_test.cpp
